Update ClassRelation Test